--- a/src/design_notebooks/2026spring/irh8156.md
+++ b/src/design_notebooks/2026spring/irh8156.md
@@ -35,3 +35,15 @@ Notes on the report:
 * Its data cache is 2 way associative
 * A question I have is if a different type of branch predictor would improve the performance of the CPU, specificially something more advanced, and what tradeoffs implementing something like that would have
 * Why don't we use data forwarding when the hazard detection stalls the pipeline using NOPs?
+
+
+## Week of 22 Feb 2026
+
+Project Work: 
+* Went over the Design and Construction of RTL Toolchains at NYU report
+
+Notes on the report:
+* Cmake is the main tool used for building and similation
+* vcpkg handles dependencies and catch2 gives us the testing framework
+* A question I have: Are there things that are easier/more accurate to test in HDL that become harder when everything's in C++?
+* If we're depending to heavily on verilator, isn't it risky to put all our hope in this 1 tool since it could have bugs or limitations?
